tests/negative/unwrap_err.sans
fail() R<I> = err("bad")
main() {
  r = fail()
  v = r!
  p(itos(v))
}
